--- a/kifah/vercel.json
+++ b/kifah/vercel.json
@@ -11,7 +11,16 @@
   ],
   "routes": [
     {
-      "src": "/(.*\\.(js|css|ico|png|jpg|jpeg|gif|svg|webp|woff|woff2|ttf|eot))",
+      "src": "/(.*\\.(otf|ttf|woff|woff2|eot))",
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET, OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type",
+        "cache-control": "public, max-age=31536000, immutable"
+      }
+    },
+    {
+      "src": "/(.*\\.(js|css|ico|png|jpg|jpeg|gif|svg|webp))",
       "headers": {
         "cache-control": "public, max-age=31536000, immutable"
       }
